N°3914 Fix configure this list button alignment and add background color to selected fields

--- a/css/backoffice/layout/multi-column/_column.scss
+++ b/css/backoffice/layout/multi-column/_column.scss
@@ -28,7 +28,13 @@ $ibo-column--margin-bottom--is-last-element: 48px !default;
   flex-shrink: 1;
   padding: $ibo-column--padding-y $ibo-column--padding-x;
   flex-basis: 10%;
-
+  display: flex;
+  flex-direction: column;
+  
+  >.ibo-button{
+    margin-left: 0;
+    margin-right: 0;
+  }
   &:not(:last-child) {
     margin-bottom: $ibo-column--margin-bottom--is-last-element;
   }
